# ChangeLog for games-board/pokerth
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/pokerth/ChangeLog,v 1.54 2013/06/29 16:06:28 mr_bones_ Exp $

  29 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -files/pokerth-0.9.5-underlinking.patch, -pokerth-0.9.5.ebuild:
  old

*pokerth-1.0.1 (23 May 2013)

  23 May 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/pokerth-1.0.1-underlinking.patch, +pokerth-1.0.1.ebuild:
  version bump (bug #471108)

  08 May 2013; Vicente Olivert Riera <vincent@gentoo.org> pokerth-1.0.ebuild:
  ~ppc keyword, bug #460772

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> pokerth-0.9.5.ebuild,
  pokerth-1.0.ebuild:
  Move Qt dependencies to the new category

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pokerth-1.0.ebuild:
  Stable for x86, wrt bug #458640

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pokerth-1.0.ebuild:
  Stable for amd64, wrt bug #458640

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> pokerth-1.0.ebuild:
  add dev-libs/protobuf dep (bug #453578)

*pokerth-1.0 (22 Jan 2013)

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/pokerth-1.0-underlinking.patch, +pokerth-1.0.ebuild:
  version bump (bug #453470)

  22 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> pokerth-0.9.5.ebuild:
  Get rid of boost-utils eclass usage. Depend on threaded boost when possible.

  06 Nov 2012; Tupone Alfredo <tupone@gentoo.org> pokerth-0.9.5.ebuild:
  Build with boost-1.50 Bug #441684 by diego

  04 Sep 2012; Michael Sterrett <mr_bones_@gentoo.org> pokerth-0.9.5.ebuild:
  doesn't build with boost-1.50

  01 Sep 2012; Julian Ospald <hasufell@gentoo.org> pokerth-0.9.5.ebuild,
  files/pokerth-0.9.5-underlinking.patch:
  fix as-needed

  23 Aug 2012; Michael Sterrett <mr_bones_@gentoo.org> pokerth-0.9.5.ebuild:
  fix linking with ld.bfd

  23 Aug 2012; Michael Sterrett <mr_bones_@gentoo.org> -pokerth-0.9.4.ebuild,
  pokerth-0.9.5.ebuild: