@@ -2,7 +2,7 @@ AUX pokerth-1.0-underlinking.patch 467 SHA256 1d0cfdd84aeb95ac138550226bd19b7342
 AUX pokerth-1.0.1-underlinking.patch 467 SHA256 1d0cfdd84aeb95ac138550226bd19b73427471b00f8714c56b439b098fff4c6e SHA512 084d379e8fee39d556616dbb6bd8610800754c25b363414622af42d7309da5ffb1a36ca6a6b003b76df388706f149bc65aa26d76afd2e8130b87c2d37d32d87d WHIRLPOOL 25f05e172a4c5352a0056f0e984681abaf5afee5d43c28bf615092c988a5a7b3b12b26f9691823133c0653f3a0e0458732863ca1c2e19beaae699ac945bcd82c
 DIST PokerTH-1.0-src.tar.bz2 19125507 SHA256 5aaaf913a7696f12afe18f9b2da55c84f7343bf8afb45b25f7852a25fd1a6c10 SHA512 5209b37c946f32e7dc0107663bc6128f1e5becb293c4aec1bacd993f81f822450f8248d1dbad4096e0a93930f8d608499e98000f5af5ca0256dda23125059cae WHIRLPOOL 6fd2bb111cc612845f18dac50ffb518fbee96ae08c28b88052814019b9b26d3d8dd8088a4e29555cb78d35378534d784e08a13a1cf2827e9291ddfc7cd705cd8
 DIST PokerTH-1.0.1-src.tar.bz2 19201790 SHA256 29c359028a27fad0d30e11a9295e610593d23e34bffdb71de488f63f459e3d5d SHA512 b91fe3780eab3a7bd9ffe6f3629f514f87d9962978f42822850a826278febe2e06fbf3397df9d66d4d3d3d3f9d5688715308f4aae4bda5084b9d0b10a4af75d8 WHIRLPOOL cc7dba615a00c5a305abde3cae620ceff8557eb22040c436703bcbf0d3f54b95073573267f5a9326f1fd6fd872db9177d9371832646ce09658db12636e767f5b
-EBUILD pokerth-1.0.1.ebuild 1558 SHA256 57d38ceea84ad177a4be4b69550b098b4b1cc046b3a16497a4698c7a8d6d33c8 SHA512 a98c00028895ba501f14e353986cb7b02684b57fbbdabeccfa94665f7afd8c059f8c9b1cd4db8851c4cae8627fd89ac7c8b235355520c0ae576fcd900f69fde5 WHIRLPOOL ab449461de7e1edd27ee7126bc399558c6d7c6c4c0c5d64de1c6105c78380ab64f735c535abcc54a23519391a2afe8a592cc28ebec0fb93680bc985ca6c1c787
-EBUILD pokerth-1.0.ebuild 1533 SHA256 2939a9ec3b31fad4e6add8590b7e7dedbe24e2e23b317dc7578252be8f0d0018 SHA512 0793d7990a70ab3c6af54877ad4f9ecfb436fbe7e169ff93a3b763fc9aafaf656c2722a59a69fb1e98c2e3d60530f13a0ed735602438b08f353a7968aeb8d92b WHIRLPOOL d4c4b34275e9b9fa3ced8fef4224700f364fb5945b4fd669dea6204de791b9368ea3646ffe3c9e3e18016edbb56fe73eebce6365386a0e271033c8717f8dee08
-MISC ChangeLog 7053 SHA256 af6b5d08a2349721df2bf8ac3c35aff68aef6e26ac443dde9f5d72e7e8edc864 SHA512 5533356b1b626dc4aa43a75954e2d5a01efc400c315fa9f737d50488cc472c2ede2f2909e22280222cff5a79699789fe511c600bdb4b2bb32018d3ceca22ba60 WHIRLPOOL b5a9e4f952545480848adc7b941318fe82bc954e332f2e3ff9d776efcb9811a6225c7d91330f22dc6aeeb7c82d9bc7e6058ea3f8c6f8214845b8f3c6be58fda5
+EBUILD pokerth-1.0.1.ebuild 1560 SHA256 f508f2237d1d79db1bf3a8db5c584f16f49b0d0f574c04a2f271c7b997f233a3 SHA512 d474c7ef222c8f228d1ebee6e611379991f962ecb0970a888448dbca86498fadfc8e84856a9351fd462db248aa95144e877ef6e12361a2c1e038673cc58416b7 WHIRLPOOL 8fd7294c31bcea5f426e8144c9dc37edaded705be54f352146d65336c8ecf8c7e54eaf4b41ff5ed95607b86fedec98afa44d4bb2d56184dcdb6206c6163fc10d
+EBUILD pokerth-1.0.ebuild 1537 SHA256 014598696da457df3430b0be3dbfdb6a7141f56732e3cfb22341e5559037f280 SHA512 b070b4efaebd65208246092af37b09d608482bf07bb33bd4b3367ea31a303fc018f914429883c1173c838c46312c7334e014d94221040ad9d135ad8d81fc520d WHIRLPOOL ec633148fc29c230189efa43094e5640a347e161fbb7bc83ec2f1ff313506e0440144cd552b2a5b609137730e3f036216382aa2a63894d3046903f42b007ef1d
+MISC ChangeLog 7178 SHA256 267422e5de2fc7c54c3f3b2ea0b268bf71fe88d9ede9d0c4e2deb1e1b95886d3 SHA512 1edf1bf805db53190dfa0302fa6b7e8429438eec8d9df466afe92a8c6d09a66da0d15ff0526bb3955585c07f6ef4198263357dcf32483beae149bb78b7f71c75 WHIRLPOOL 9da33eaf6b3e3f03411d99bb152ea10b750d8902afd156fd9951877bfa8de5504f740b6f6103ddf4c59a1dd466f4c08450580586d526864f9ca4bbd046e15be2
 MISC metadata.xml 160 SHA256 5ac0a3647e8149d52ce55d391cf1680ac52d6f0330be21c3bca4790b971b5e5d SHA512 e5ae2b384aa96a402995bf0e8b4c29d38d57f1ebc44eeca71d7eda9a29431b7737c3c3a5df053e868a21c21abb457658344e7fb7c2102d4625a160273048c2db WHIRLPOOL b626c8afedc54ba9adb429cb53f860c0165702b1cea15f5c84c4e458cc94f28755ec66c5b73d9ecc155c1de70c82e1d79ba859c2124d0a78437681f2786e1246
