@@ -1,8 +1,8 @@
-AUX pouetchess-0.2.0-gcc43.patch 309 RMD160 7db33dfa3a61c0fdacea9763b0d02061f7a197ef SHA1 2ca6cab683d7f36ac7848b0b9f0bf74123f484df SHA256 61fb67a699c11c36df6a178a997d3b678c62dfea16b2bd6c975166174aed3a12
-AUX pouetchess-0.2.0-nvidia_glext.patch 373 RMD160 34d53944251ea3b6363ba0a4a4a5cd7a831ffe93 SHA1 f3cb0e05c6fa782193408df5250ff4c225433e5b SHA256 d0466dee4b11efab347409e7e83fffac5ea9c6b1350b660c01b20a0107564a4b
-AUX pouetchess-0.2.0-sconstruct-sandbox.patch 754 RMD160 cd2b425d782fa1da12bd6a68c77f54d8b577c16b SHA1 ffbbf33d85f427cd04a7f57f4ec5e17d114ef3fb SHA256 0d0c7471bc5de6157f5d8c44dde061dbbf9215fc6b00bd4be590d41dabbdd70a
-AUX pouetchess-0.2.0-segfaults.patch 1690 RMD160 119737eca2ec3ee2a0633480920d5143b5ae7df6 SHA1 035d6fe4a359c8e802a41ec3eec8d8abd6f3e0cb SHA256 97605336a668e8d7f343a5f35bc886c8d19f8aadf60d68be86ac25580776c8f7
-DIST pouetchess_src_0.2.0.tar.gz 1055338 RMD160 29611b78ef75b3707ad98752055da775335c0490 SHA1 023bea8043b5dcf8a134531b920497c7efb89adb SHA256 fe966ff1b0aa2dd6d0ca2b62692f5b788e3a286050a6a374e58ca0612f68b2ef
-EBUILD pouetchess-0.2.0-r1.ebuild 1597 RMD160 b9f64e521057b99db589c1155c415b6d41803709 SHA1 18c3205dbe2a6d8ec60f3cb048bf368694c6595b SHA256 12ec29b1764359173ab6491564e857899897f1d1f5e1de3a0598721042d1729d
-MISC ChangeLog 2675 RMD160 df4cbb194142641a2cc64976d5b34f349192bd47 SHA1 80ca7a07cbea7b5efe0488eab6920c6241b63ed1 SHA256 4e2dfe3d8ec450d3557339be99bf354a8c86195fe1208ebbdf8b13a6e53c4f54
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+AUX pouetchess-0.2.0-gcc43.patch 309 SHA256 61fb67a699c11c36df6a178a997d3b678c62dfea16b2bd6c975166174aed3a12 SHA512 7a72ad4c11eacdea92973aeb2a81e372ac49e2e41d4e1efa013d4ae2076cbb0a703facdc7abf6c1b9537a358323c2fe070bd3e26cbc5f14df287a747e5b26f14 WHIRLPOOL 7ad6fde7810c61af3da81cb36531a6b0f544e771a2d02c85cd25fd6877ff809b4925d943db804145442d945136c264424dd5d6dffeaca0d2283bd34b9cec899f
+AUX pouetchess-0.2.0-nvidia_glext.patch 373 SHA256 d0466dee4b11efab347409e7e83fffac5ea9c6b1350b660c01b20a0107564a4b SHA512 696f61923ac027046f5b8f7e29a3aa266b75fba61983afd08c9a63970ecade1daa41a570fa263bd3ec7c7630e62377be1c07563531609ee88ea315234b054980 WHIRLPOOL 0549acf9d7d1c0884ba923efbc18b1fe4a9f2e01041007c234decd59820888dc66f691cd3278104dddc242d03190ad2674d9d30f8ed52b52699a3342eef84b18
+AUX pouetchess-0.2.0-sconstruct-sandbox.patch 754 SHA256 0d0c7471bc5de6157f5d8c44dde061dbbf9215fc6b00bd4be590d41dabbdd70a SHA512 499469d9bed610915056f7d71cd75f62bfb37eb333dfca44d79f76d978b457e41651adda7426a62d86ae19cd02df892476bf3f8988fdc7d1e76a468e4eb0dd39 WHIRLPOOL befe2d2bb60b824c69a6a3635fa4059309220afb47f64e60b85f03a766cdc1e8a748cf55ce65a10cfb99194b4fe0170d96985aedd34f37170474eb1aa984e788
+AUX pouetchess-0.2.0-segfaults.patch 1690 SHA256 97605336a668e8d7f343a5f35bc886c8d19f8aadf60d68be86ac25580776c8f7 SHA512 cb054f1bd443c2fc0d211f83c40514925988c1a04480b442522fc310b1a0083b1cfa60abfac10c519d85a85ae342ed9354a98fe7fc2e898183e0d8518051c57f WHIRLPOOL adedd19a69a2f30416e3288ef2224d9b07b35e0464265a0d78ad348f0b2b3b8da553ae3ce92327379c41840212c14ea7b05475cb834b9495b6b0bc63c0b167c9
+DIST pouetchess_src_0.2.0.tar.gz 1055338 SHA256 fe966ff1b0aa2dd6d0ca2b62692f5b788e3a286050a6a374e58ca0612f68b2ef
+EBUILD pouetchess-0.2.0-r1.ebuild 1526 SHA256 18f43fc4a23b3b6d8b49efc3282b2689582a28aa344cd6dfd61bf141913c02b5 SHA512 ef3944a65246549cae18c4c65317cf9895cdaca89239ba48bf84bcb2b96b1a4b957825b4d8a419cd86ccd082786b83d5850e3ae35ac77f36359dc44d63d6fb90 WHIRLPOOL a0bb6293b9c0418e426fb8bf4a31f526edbd1dbe683777d1ae96c912200405ed228a63bc6244dd15aa8f1cc8432486bba7924cf1ba8056717573186727abf358
+MISC ChangeLog 2788 SHA256 3cfe412384e67d4c690ee0d7f434804c3d606f82feb0e62ac2561b86b79c531d SHA512 847df9b870b37145150faf755b4e26269ac5a841e52c74c4faf00a098c392ca9daa31fe80780845999665cc6d740c18d5e0b7cc231deb6b689f9b38baf369e6d WHIRLPOOL 10bbe7f99bc8473d656ceb1cc4508f46cc3989ffc6a24f3aed6ad1bc9ee047546f92aee8c5942d2e60d2c54086c011431858bd99835a908306dc481b31b3d4fc
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
