@@ -1,6 +1,10 @@
 # ChangeLog for games-board/pokerth
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/pokerth/ChangeLog,v 1.54 2013/06/29 16:06:28 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/pokerth/ChangeLog,v 1.55 2013/06/29 16:07:57 mr_bones_ Exp $
+
+  29 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org> pokerth-1.0.1.ebuild,
+  pokerth-1.0.ebuild:
+  add slot to libsdl dep
 
   29 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org>
   -files/pokerth-0.9.5-underlinking.patch, -pokerth-0.9.5.ebuild:
